microservicios/sagas-rest/k8s/api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api-gateway
  name: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      securityContext:
        runAsUser: 1000300
      containers:
        - name: api-gateway
          image: codeurjc/api-gateway
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8050
          securityContext:
            allowPrivilegeEscalation: false
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  labels:
    app: api-gateway
spec:
  ports:
    - port: 8050
  selector:
    app: api-gateway
  type: ClusterIP
