microservicios/sagas-rest/k8s/notifications.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: notifications
  name: notifications
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notifications
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: notifications
    spec:
      securityContext:
        runAsUser: 1000300
      containers:
        - name: notifications
          image: codeurjc/notifications
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: notifications
  name: notifications
spec:
  ports:
    - port: 8070
  selector:
    app: notifications
  type: ClusterIP
