microservicios/sagas-rest/k8s/ingress.yaml
 
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sagas-rest
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080
